Dandole formato al html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   
   <body>
-    <h1>Comma Separated Value Analyzer
+    <h1>Comma Separated Value Analyzer</h1>
     <div> <!--Letra tipo italica -->
       <i>Escriba una cadena CSV. Pulse el boton de la tabla. El programa lanzará una taba con los datos especificos.</i>
     </div>
