Creando pag web

--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-My GitHub Page
+<html>
+  <head>	
+    <title> Analizador CSV </title>
+    <link href="global.css" rel="stylesheet" type="text/css">
+    
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script type="text/javascript" src="csv.js"></script>
+    
+  </head>
+  
+  <body>
+    <hr size="15" />
+    <h1>Comma Separated Value Analyzer</h1>
+    <div> <!--Letra tipo italica -->
+      <i>Escriba una cadena CSV. Pulse el boton de la tabla. El programa lanzara una taba con los datos especificos.</i>
+    </div>
+    <hr size="15" />
+    <table>
+      <tr>
+	<th> Cadena CSV:</th>
+	<td><textarea autofocus cols = "60" rows = "5" id="original"></textarea></td>
+	<!--td permitirá insertar texto en la tabla-->
+      </tr>
+    </table>
+    <button type="button">table:</button><br> <!-- <br> salto de linea-->
+    <span class="output" id="finaltable"></span>
+  </body>
+</html>
