Añadiendo enlace a los tests

--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
     </table>
     <button type="button">table:</button><br> <!-- <br> salto de linea-->
     <span class="output" id="finaltable"></span>
+    <i>Pulse aqui para acceder a los tests: <a href="tests/index.html"> Tests</a></i>	
   </body>
 </html>
